# mailr

./: .gitignore  Dockerfile.dev  README.md  dev.sh
frontend/: package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: CampaignsDashboard.tsx  Contacts.tsx  EmailAccounts.tsx  GlobalSidebar.tsx  Settings.tsx
frontend/src/components/ui/: button.tsx  card.tsx
hermes/: alembic.ini  bcrypt_test.py  config.py  main.py  pyproject.toml
hermes/dto/: user.py
hermes/migrations/: env.py
hermes/migrations/versions/: 5af01730cc52_create_users.py
hermes/models/: common.py  email_accounts.py  job_config.py  job_logs.py  models.py  smtp_configs.py  users.py
hermes/routes/: auth.py  users.py  warmup.py
hermes/services/: pairing.py  user_service.py
hermes/tasks/: warmup.py
hermes/utils/: auth.py  db.py  db_utils.py  init_db.py  scheduler.py
