[project]
name = "hermes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.17.0",
    "asyncpg>=0.30.0",
    "black>=25.9.0",
    "fastapi>=0.118.0",
    "flake8>=7.3.0",
    "mypy>=1.18.2",
    "psycopg2-binary>=2.9.11",
    "fastapi[standard]>=0.118.0",
    "rabbitmq>=0.2.0",
    "sqlmodel>=0.0.25",
    "tox>=4.32.0",
    "uvicorn>=0.37.0",
    "python-dotenv>=1.1.1",
    "fastapi-mail>=1.5.3",
    "redis>=7.0.1",
    "celery>=5.5.3",
    "passlib>=1.7.4",
    "python-jose>=3.5.0",
]
